# Wildfire_Human_Agency_Model

./: LICENSE.md  README.md  Todo.xlsx  WHAM_v1_vs_v2_025_summary.html  WHAMrequirements.txt  files.txt  package-list.tx  pyproject.toml  requirements.txt  requirements_312.txt  requirements_312_mac.txt  requirements_mac.txt  setup.py  wham38.yml  wham_312.yaml  wham_basic.yml
Model Calibration/: Arson_ignitions.nc  Calibration options.xlsx  MODIS_WHAM_Disagreements.txt  Newpop_Arson.nc  Newpop_Background.nc  Output analysis.R
Model Calibration/Outputs 03102021/: AFTs_2015.csv  Fire_dat_by_AFT.csv  Soil_constraint_reconfigure.csv  Total_new_unoc_pars.nc
Model Calibration/Outputs 12102021/: New_pop_data.nc  New_pop_data2.nc  Newpop2_Arable.nc  Newpop2_Pasture.nc  Newpop2_Vegetation.nc
Model Calibration/Outputs 15092021/: Arson_ignitions.nc  cropland_ba.nc  pasture_ba.nc  vegetation_ba.nc
Model Calibration/Outputs 16092021/: total_ba.nc
docs/: readme.docx  ~$readme.docx  ~WRL0005.tmp
tests/: Tree_test.py  conftest.py  setup_full.py  test_AFT_compete.py  test_afr_allocate.py  test_afr_boot.py  test_afr_compete.py  test_afr_constraint.py  test_aft_allocate.py  test_aft_boot.py  test_agent_compete.py  test_agent_getpars.py  test_arson.py  test_background_rate.py  test_control.py  test_crb.py  test_deforestation.py  test_emulator.py  test_fire_control.py  test_ls.py  test_ls_allocate.py  test_ls_boot.py  test_model_yaxis_allocate.py  test_seasonality.py  test_setup.py  test_soil_constraint.py  test_tree.py  test_tree_predict.py  test_wham.py  test_wham_boot.py
(+145 files in other folders)
