[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wham"
version = "0.2.0"
description = "WHAM!: Wildfire_Human_Agency_Model."
readme = "README.md"
authors = [
    { name = "OP", email = "oliver.perkins@kcl.ac.uk" }
]
requires-python = "==3.12.*"
dependencies = [
    # Add runtime dependencies here, e.g.:
    # "numpy==1.21.0",
    # "pandas==1.3.0"
]

[project.urls]
Homepage = "https://github.com/OliPerkins1987/Wildfire_Human_Agency_Model"